[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "multidiffusion"
dynamic = ["version"]
description = "Inject multi-diffusion into your UNets/Transformers with two lines of code."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
authors = [
    { name = "Benjamin Paine" },
]
keywords = ["diffusion", "multidiffusion", "stable-diffusion", "deep-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch",
    "numpy",
    "typing_extensions",
    "docstring_parser",
]

[project.optional-dependencies]
audio = ["einops"]

[project.urls]
Homepage = "https://github.com/painebenjamin/instant-multidiffusion"
Repository = "https://github.com/painebenjamin/instant-multidiffusion"
Issues = "https://github.com/painebenjamin/instant-multidiffusion/issues"

[tool.setuptools.packages.find]
include = ["multidiffusion*"]

[tool.setuptools_scm]
